--- a/02_CSS/02_Selectors/index.html
+++ b/02_CSS/02_Selectors/index.html
@@ -6,9 +6,9 @@
     <title>CSS Selectors</title>
     <style>
         /* Element Selector  */
-        div{
+        /* div{
             /* background-color: red; */
-        }
+        /* }  */
 
         /* Class Selector  */
         .red{
@@ -60,6 +60,57 @@
             background-color: aqua;
         }
 
+
+        /* ===================================================== */
+         /* .box:first-child{
+            background-color: red;
+        } */
+
+        /* .box::first-line{
+            color: yellow;
+        } */
+
+        /* .boxes *{
+            color: blue;
+            border: 2px solid black;
+        }
+
+        p, a, .box, [data-color="primary"]{
+            padding-top: 45px;
+        } */
+
+        /* .box:nth-child(odd){
+            background-color: blue;
+        } */
+
+        /* .box:nth-last-child(2){
+            background-color: red;
+        } */
+
+        .boxes::before {
+            content: "Hello, world";
+            color: blue;
+        }
+
+        .boxes::after {
+            content: "This is Akash";
+            color: red;
+        }
+
+        ::selection {
+            background-color: black;
+            color: aqua;
+        }
+
+        .box::first-letter {
+            color: peru;
+            font-size: 45px;
+        }
+
+        input::placeholder {
+            color: rgb(84, 84, 88);
+        }
+
     </style>
 </head>
 <body>
@@ -80,5 +131,12 @@
     </div>
     <a href="https://www.google.com">Go to Google</a>
     <a href="https://www.facebook2.com">Go to Facebook</a>
+
+    <div class="boxes">
+        <div data-color="primary" class="box">I am first box</div>
+        <div class="box">Hey I am a box</div>
+        <div class="box">Hey I am a box</div>
+        <input type="text" placeholder="Type your name here">
+    </div>
 </body>
 </html>
